--- a/berk.1
+++ b/berk.1
@@ -1,4 +1,4 @@
-.TH man 1 "06 May 2010" "1.0" "nuseradd man page"
+.TH man 1 "20 Sep 2022" "1.0" "berk man page"
 .SH NAME
 berk - A simple and versatile job dispatcher 
 .SH SYNOPSIS
