--- a/berk.1
+++ b/berk.1
@@ -1,4 +1,4 @@
-.TH man 1 "20 Sep 2022" "1.0" "berk man page"
+.TH berk 1 "20 Sep 2022" "1.0" "Berk Manual"
 .SH NAME
 berk - A simple and versatile job dispatcher 
 .SH SYNOPSIS
