--- a/berk.1
+++ b/berk.1
@@ -35,7 +35,7 @@ It was written by Jens Nyberg.
 .P
     Set the value of key for remote(s).
 
-    <key>: String with Configuration key to set.
+    <key>: String with name of key to set.
     <value>: String with value to give key.
     <remote>: String with name of remote.
 .P
@@ -44,7 +44,7 @@ It was written by Jens Nyberg.
 .P
     Unset key for remote(s).
 
-    <key>: String with Configuration key to get.
+    <key>: String with name of key to get.
     <remote>: String with name of remote.
 .P
 .B exec
